--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - order-api
       - order-db
     environment:
-      - VITE_API_BASE_URL=http://order-api:8080/api
+      - VITE_API_BASE_URL=http://localhost:8080/api
     networks:
       - internal-net
     command: npm run dev
